Added Samurais Controller & Configured it to use SamruaiDbContext

--- a/SamuraiAPI/appsettings.json
+++ b/SamuraiAPI/appsettings.json
@@ -4,8 +4,10 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
+      //Using logger provided by asp.net core for the EF core
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
+  "ConnectionStrings": { "samuraiDBCS": "Data Source=(localDB)\\MSSQLLocalDB; Initial Catalog =SamuraiAppData " },
   "AllowedHosts": "*"
 }
