--- a/SamuraiApp.Tests/SamuraiApp.Tests.csproj
+++ b/SamuraiApp.Tests/SamuraiApp.Tests.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SamuraiApp.Data\SamuraiApp.Data.csproj" />
+    <ProjectReference Include="..\SumaraiApp.Domain\SumaraiApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
